Fixed overflow issues
NOTE:  parent height should define max height. child height will follow.

--- a/styles.css
+++ b/styles.css
@@ -3,44 +3,48 @@ body {
   background-color: #0f172a;
   font-family: "Roboto";
   color: #CCCCCC;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .flex-container {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 50px;
+  margin: auto;
+  padding-left: min(2em, 15%);
+  padding-right: min(2em, 15%);
+  padding-top: 100px;
+  max-width: 100vh;
+  max-height: 100vh;
+  height: 100%;
 }
 
 .flex-item {
   text-align: center;
   width: 100%;
-  border: 1px solid black;
+  border:   black;
 }
 
 .flex-content-left {
   text-align: left;
-  padding: 20px;
 }
 
 .flex-content-right {
   text-align: left;
-  padding: 20px;
+  overflow-y: auto;
   height: 100%;
-  max-height: 100vh;
 }
 
 .card-flex-content-left {
-  text-align: center;
-  padding: 20px;
+  text-align: left;
+  padding: 10px 0px 0px 10px;
   width: 30%;
 }
 
 .card-flex-content-right {
   text-align: left;
-  padding: 20px;
+  padding: 10px;
   width: 70%;
-  overflow-y: auto;
 }
 
 .h1-sections {
@@ -54,7 +58,6 @@ body {
   transition: 0.3s;
   width: 100%;
   border-radius: 5px;
-  margin: 10px;
   background-color: transparent;
 }
 
@@ -64,20 +67,27 @@ body {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 2.5rem;
   margin: 0;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 1.2rem;
   margin: 0;
+  padding-bottom: 5px;
 }
 
 p {
-  font-size: 16px;
+  font-size: 1rem;
+  color: #aca7a7;
   padding-bottom: 5px;
   padding-top: 5px;
   margin: 0;
+  letter-spacing: 0.03rem;
+}
+
+b {
+  color:#CCCCCC
 }
 
 @font-face {
@@ -85,36 +95,25 @@ p {
   src: url(font-family\Roboto\Roboto-VariableFont_wdth,wght.ttf);
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   .flex-container {
     flex-direction: column;
-    margin: 0px 10px 0px 10px;
-    padding: 10px 0px 10px 0px;
+    height: auto;
+  }
+  .card {
+    flex-direction: column;
+  }
+  .card-flex-content-right {
+    overflow: hidden;
+    height: auto;
   }
   body {
     overflow: auto;
   }
-}
-@media (max-width: 768px) {
-  .flex-container {
-    flex-direction: column;
-    margin: 0px 20px 0px 20px;
-    padding: 20px 0px 20px 0px;
+  .card-flex-content-left,.card-flex-content-right {
+    width: 100%;
   }
-  body {
-    overflow: auto;
-  }
-}
-@media (max-width: 1000px) {
-  .flex-container {
-    flex-direction: column;
-    margin: 0px 30px 0px 30px;
-    padding: 30px 0px 30px 0px;
-  }
-  body {
-    overflow: auto;
-  }
-}
+} 
 
 ::-webkit-scrollbar{
   display: none;
